--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "netlify deploy --prod"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.8",
+    "serverless-http": "^3.2.0",
     "stripe": "^14.10.0"
   }
 }
