switching to render

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ AUTH_TOKEN = c8801ff88b4483305a1d3211b6a6ae6b
 PHONE_NUMBER = 7863014234
 GENERATE_SOURCEMAP=false
 SKIP_PREFLIGHT_CHECK=true
+MONGO_URI= mongodb+srv://tony464us2012:Anthony464$@cluster0.yph25.mongodb.net/Shop_109
