--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js",
-    "build": "netlify deploy --prod"
+    "start": "node index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,7 +18,7 @@
     "http-errors": "~1.6.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.10.1",
+    "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.8",
     "serverless-http": "^3.2.0",
